footer alignment fixed

--- a/Rentit-frontend/src/components/Footer/Footer.css
+++ b/Rentit-frontend/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 #footer {
   font-family: 'Montserrat', sans-serif;
-  margin-top: 1rem;
+  margin-top: 2rem;
 }
 .main-footer {
   padding: 70px 0;
